# EXACT-mppi

./: .gitignore  AGENTS.md  CONTEXT.md  Docker_guide.md  README.md  Readme.md  docker.md
EXACT_MPPI_core/: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
EXACT_MPPI_core/exact_mppi/: __init__.py  geometry_observation_3d.py  scenario_definition_3d.py  scenario_runner_3d.py
EXACT_MPPI_core/exact_mppi/config/: config.py
EXACT_MPPI_core/exact_mppi/mppi_3d/: __init__.py  control_preference_critics.py  control_smoothing.py  controller.py  geometry.py  goal_path_critics.py  models.py  motion_models.py  obstacles_critic.py  optimal_trajectory_validator.py  optimizer.py
EXACT_MPPI_core/exact_mppi/mppi_jax/: controller.py  critic_manager.py  logger.py  motion_models.py  optimal_trajectory_validator.py  optimizer.py  rangerminiv3.py
EXACT_MPPI_core/exact_mppi/path/: __init__.py  global_ref_path_module.py  path_search.py  reference_path.py
EXACT_MPPI_core/exact_mppi/replay_viewer_3d/: README.md  __init__.py  app.js  index.html  style.css
EXACT_MPPI_core/exact_mppi/scenarios_3d/: __init__.py  cluttered_corridor_3d.yaml  narrow_gap_t_volume_3d.yaml  open_track_3d.yaml  t_shape_trap_3d.yaml  vertical_gate_3d.yaml  (+1 more)
EXACT_MPPI_core/tests/: test_3d_replay_viewer.py  test_3d_scenario_runner.py  test_mppi_3d_box_union_sdf.py  test_mppi_3d_control_preference_critics.py  test_mppi_3d_control_smoothing.py  test_mppi_3d_goal_path_constraint_critics.py  test_mppi_3d_minimal_loop.py  test_mppi_3d_obstacle_avoidance_example.py  test_mppi_3d_obstacles.py
(+159 files in other folders)
